supported/blueprints/openstack/base/v1.2.1/ReadMe.md
## About the F5-VNF-Service-Layer-Base_v1.2.1 solution blueprint
This version contains the following changes:

- The bigip_os_ssh_key input for OpenStack has changed to **bigip_ssh_key** to be VIM agnostic.
- Gi Firewall for both OpenStack and vSphere has a new [AS3 Declaration version 3.13.0 (non-LTS)](https://clouddocs.f5.com/products/extensions/f5-appsvcs-extension/3/userguide/components.html#as3-declaration)

#### Copyright
Copyright 2014-2021 F5 Networks Inc.

#### License

##### Apache V2.0 
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at: [http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0).

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

##### Contributor License Agreement
Individuals or business entities who contribute to this project must have completed and submitted the F5 Contributor License Agreement.
